tests-system/rbt-valid-record-types/output
Ref Kitten {}
^^^ rbt-valid-record-types/foo.trlc:7: error: cannot declare object of abstract record type Ref
Processed 1 model, 0 checks and 1 requirement file and found 1 error
